@@ -5,7 +5,9 @@ use Module::Build::Compat;
 use File::Spec;
 use File::Path;
 use Config;
-require File::Spec->catfile('t', 'common.pl');
+
+my $common_pl = File::Spec->catfile('t', 'common.pl');
+require $common_pl;
 
 use Carp;  $SIG{__WARN__} = \&Carp::cluck;
 
